--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "react": "^18.2.0",
+    "mui": "^0.0.1",
+    "react": ">=16.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -42,5 +43,9 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.3.0"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.0.0",
+    "react": ">=16.8.0"
   }
 }
